Added explicit setting of endorsed directory for unit tests